[package]
name = "kudosjar"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
scale = { version = "3.0", default-features = false } 
ink = { git = "https://github.com/paritytech/ink", tag = "v5.1.1", default-features = false }
ink_primitives = { git = "https://github.com/paritytech/ink", tag = "v5.1.1", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", tag = "v5.1.1", default-features = false }
ink_env = { git = "https://github.com/paritytech/ink", tag = "v5.1.1", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", tag = "v5.1.1", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
scale-info = { version = "2.11.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
